fix(adapter): 修正品牌适配器字段格式以符合err.md标准
更新PandaBrandAdapter以严格遵循err.md中定义的字段格式标准：
1. 统一所有字段值为字符串类型
2. 修正F_字段命名格式为F_01等两位数字
3. 添加价格和数字的格式化方法
4. 移除不必要的字段类型判断逻辑